# minietl

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/minietl/: __init__.py  convert.py  data.py  hints.py  jobs.py  pipeline.py
