[project]
name = "minietl"
version = "0.0.1"
authors = [
  { name="Infinnitor" },
]
description = "A small library for handling transformations on different data types"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"requests-cache",
	"requests",
	"openpyxl"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

